# payne-amplifier

./: AGENTS.md  bundle.md
behaviors/: amplifier-expert.yaml  command-line.md  command-line.yaml  exploration.yaml  filesystem.yaml  issue-management.yaml  issues-auto-work.yaml  logging.yaml  recipe-running.md  recipe-running.yaml  redaction.yaml  software-development.md  software-development.yaml  streaming-ui.yaml  task-management.md  task-management.yaml  timely.yaml  ui.yaml  web.md  web.yaml
bundles/: basic.md  software-developer.md
context/: software-development-instructions.md
context/lakehouse/: lakehouse.md
context/software-development/: software-development-base.md
max_payne_collection/modules/hook-issue-auto-work/: README.md  pyproject.toml
max_payne_collection/modules/hook-issue-auto-work/amplifier_module_hook_issue_auto_work/: __init__.py
max_payne_collection/profiles/: issue-aware.md
max_payne_collection/profiles.v2/: README.md  general.md  issue-aware.md
