[project]
name = "amplifier-module-hook-issue-auto-work"
version = "0.1.0"
description = "Hook that automatically continues work on ready issues"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "amplifier-core",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hook_issue_auto_work"]
